# git-lazy-mount

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-MIT  README.md  design.md  redesign.md  rust-toolchain.toml
.github/workflows/: ci.yml  e2e-matrix.yml  lazy-mount-demo.yml
benchmarks/: .gitignore  Dockerfile  README.md  bench_repo.sh  format_transcripts.py  run.sh  run_all.sh  ts_prepend.py
benchmarks/charts/: agent_chartdata.json
benchmarks/firecracker/: README.md  bench_lazy_fc.sh  bootstrap.sh  chartdata.json  guest_init.sh  make_agent_charts.py  make_charts.py  repos.tsv  run_vm.sh  startup.sh  startup_agent.sh
benchmarks/transcripts/: react-full.md  react-lazy.md  typescript-full.md  typescript-lazy.md  vscode-full.md  vscode-lazy.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/tests/: cli_e2e.rs  crash_injection.rs  fsmonitor.rs  transparent_e2e.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  fetch.rs  ids.rs  lib.rs  mode.rs  object_id.rs  path.rs  state.rs  tree.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: controller.rs  lib.rs  registry.rs
crates/filters/: Cargo.toml
crates/filters/src/: lib.rs
crates/fs-common/: Cargo.toml
crates/fs-common/src/: attr.rs  inode.rs  lib.rs  pool.rs
crates/fs-fskit/: Cargo.toml
crates/fs-fskit/extension/: .gitignore  Info.plist  README.md  build.sh  git-lazy-mount.entitlements  project.yml  validate-mount.sh
crates/fs-fskit/extension/GitLazyMount/: ContentView.swift  GitLazyMountApp.swift
crates/fs-fskit/extension/GitLazyMountFS/: GitLazyMountFS-Bridging-Header.h  GitLazyMountFS.entitlements  GitLazyMountFSExtension.swift  GlmFileSystem.swift  GlmItem.swift  GlmSupport.swift  GlmVolume.swift  Info.plist  glm_fskit.h
crates/fs-fskit/src/: bridge.rs  capability.rs  collision.rs  coordination.rs  ipc.rs  lib.rs  lifecycle.rs  recovery.rs
crates/fs-fskit/tests/: on_device.rs
crates/fs-fuse/: Cargo.toml
crates/fs-fuse/src/: adapter.rs  lib.rs
crates/fs-fuse/tests/: fuse_mount.rs
crates/fs-projfs/: Cargo.toml
crates/fs-projfs/src/: lib.rs
crates/fskit-ffi/: Cargo.toml
crates/fskit-ffi/src/: lib.rs
crates/fsmonitor/: Cargo.toml
crates/fsmonitor/src/: lib.rs
crates/fuse/: Cargo.toml
crates/fuse/src/: lib.rs  mount.rs  pool.rs
crates/fuse/tests/: differential.rs  git_extra.rs  git_more.rs  grep_materialization.rs  large_file.rs  m2_semantics.rs  m3_git.rs  m4_m5_git.rs  readdir_paging.rs  status_hydration.rs  survey_advanced.rs  survey_history.rs  survey_inspect.rs  survey_maintenance.rs  survey_more.rs  survey_worktree_ops.rs  switch_eagerness.rs
crates/git-repo/: Cargo.toml
crates/git-repo/src/: lib.rs
crates/git-store/: Cargo.toml
crates/git-store/src/: batch.rs  interop.rs  lib.rs  proc.rs  store.rs  tree_parse.rs
crates/git-store/tests/: store_integration.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: fs.rs  lib.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs
crates/object-provider/: Cargo.toml
crates/object-provider/src/: lib.rs  metrics.rs
crates/object-provider/tests/: provider_integration.rs
crates/oplog/: Cargo.toml
crates/oplog/src/: lib.rs  record.rs  view.rs
crates/overlay/: Cargo.toml
crates/overlay/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  metadata.rs  repo_id.rs  roots.rs  validate.rs
crates/projection/: Cargo.toml
crates/projection/src/: lib.rs
crates/sgrep/: Cargo.toml  README.md
crates/sgrep/src/: lib.rs  main.rs  output.rs  overlay.rs  provider.rs
crates/sgrep/src/providers/: exec.rs  mod.rs  sourcegraph.rs
crates/sgrep/tests/: overlay.rs  providers.rs
crates/stage/: Cargo.toml
crates/stage/src/: lib.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs  status.rs  tree_build.rs
crates/workspace/tests/: workspace_integration.rs
crates/worktree/: Cargo.toml
crates/worktree/src/: journal.rs  lib.rs  overlay.rs
docs/: README.md  architecture.md  compatibility.md  deadlock-startup-recovery.md  design.md  durability-security.md  failure-recovery.md  filters-and-lfs.md  fsmonitor.md  fuse-semantics.md  git-compatibility.md  git-object-fetching.md  git-state-model.md  index-strategy.md  limitations.md  metadata-limitations.md  object-fetching.md  operation-log.md  performance.md  platform-linux.md  platform-macos-fskit-ondevice.md  platform-macos.md  platform-windows.md  requirements-checklist.md  security.md  state-model.md  submodules.md  worktree-model.md
docs/adr/: 0001-git-cli-as-source-of-truth.md  0002-synchronous-object-provider-with-coalescing.md  0003-append-only-operation-log.md  0004-object-id-format-agnostic.md  0005-overlay-base-ref-for-renames.md  0006-provider-is-residency-authority.md  0007-attr-source-for-bare-store-filtering.md  0008-fskit-extension-delegates-to-daemon-over-ipc.md  README.md
docs/design/: architecture.md  compatibility.md  deadlock-startup-recovery.md  durability-security.md  fsmonitor.md  fuse-semantics.md  git-state-model.md  index-strategy.md  limitations.md  object-fetching.md  requirements-checklist.md  worktree-model.md
docs/design/future-platforms/: feasibility-windows-projfs.md  macos.md  windows.md
docs/feasibility/: README.md  file-metadata.md  git-compatibility.md  git-object-fetching.md  linux-fuse.md  macos-fskit.md  partial-clone.md
docs/future-platforms/: feasibility-macos-fskit.md  feasibility-windows-projfs.md  macos-fskit-ondevice.md  macos.md  windows.md
docs/redesign/: architecture.md  compatibility.md  deadlock-startup-recovery.md  durability-security.md  fsmonitor.md  fuse-semantics.md  git-state-model.md  index-strategy.md  limitations.md  object-fetching.md  requirements-checklist.md  worktree-model.md
scripts/: e2e-lazy-mount.sh  lazy-commit-demo.sh
