[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/git-store",
    "crates/git-repo",
    "crates/worktree",
    "crates/fs-common",
    "crates/fuse",
    "crates/testkit",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mohsen1/git-lazy-mount"
authors = ["git-lazy-mount contributors"]

[workspace.dependencies]
# Internal crates
glm-core = { path = "crates/core" }
glm-git-store = { path = "crates/git-store" }
glm-git-repo = { path = "crates/git-repo" }
glm-worktree = { path = "crates/worktree" }
glm-fs-common = { path = "crates/fs-common" }
glm-fuse = { path = "crates/fuse" }
glm-testkit = { path = "crates/testkit" }

# Third-party
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hex = "0.4"
sha2 = "0.10"
tempfile = "3"
libc = "0.2"
fuser = "0.14"
unicode-normalization = "0.1"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
# Deny on CI via `-D warnings`; keep the set pragmatic and correctness-focused.
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
