[package]
name = "glm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "git-lazy-mount command-line interface (the 'git-lazy-mount' executable)."

[[bin]]
name = "git-lazy-mount"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
glm-platform.workspace = true
glm-git-store.workspace = true
glm-object-provider.workspace = true
glm-workspace.workspace = true
glm-filters.workspace = true
glm-daemon.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
glm-testkit.workspace = true
tempfile.workspace = true
