[package]
name = "glm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The transparent `git-lazy-mount` executable (redesign.md §1): `git lazy-mount <url> <path>` then plain stock git works."

[[bin]]
name = "git-lazy-mount"
path = "src/main.rs"

[lints]
workspace = true

[features]
# The real libfuse-backed mount (Linux). Without it the CLI builds (clap/clone/
# diagnostics) but `git lazy-mount <url> <path>` reports that mount support was
# not compiled in.
fuse = ["glm-fuse/fuse"]

[dependencies]
glm-core.workspace = true
glm-git-repo.workspace = true
glm-worktree.workspace = true
glm-fuse.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
glm-testkit.workspace = true
tempfile.workspace = true
