[package]
name = "glm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The transparent `git-lazy-mount` executable (design.md §1): `git lazy-mount <url> <path>` then plain stock git works."
autobins = false

[[bin]]
name = "git-lazy-mount"
path = "src/main.rs"

# The core.fsmonitor v2 hook (§12); git invokes it on every status to learn what
# changed without statting the whole tree.
[[bin]]
name = "git-lazy-mount-fsmonitor"
path = "src/bin/fsmonitor_hook.rs"

[lints]
workspace = true

[features]
# The real libfuse-backed mount (Linux). Without it the CLI builds (clap/clone/
# diagnostics) but `git lazy-mount <url> <path>` reports that mount support was
# not compiled in.
fuse = ["glm-fuse/fuse"]

[dependencies]
glm-core.workspace = true
glm-git-repo.workspace = true
glm-worktree.workspace = true
glm-fuse.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
glm-testkit.workspace = true
tempfile.workspace = true
