[package]
name = "glm-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-user daemon: mount registry, lifecycle, and control API."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
glm-platform.workspace = true
glm-git-store.workspace = true
glm-object-provider.workspace = true
glm-workspace.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
tracing.workspace = true

[dev-dependencies]
glm-testkit.workspace = true
tempfile.workspace = true
