[package]
name = "glm-fs-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend-independent inode map with generations and rename/unlink identity."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
