[package]
name = "glm-fs-fskit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS FSKit backend: callback logic mapped to the workspace engine, capability detection, and diagnostics."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
glm-platform.workspace = true
glm-workspace.workspace = true
glm-fs-common.workspace = true
glm-ipc.workspace = true
serde.workspace = true

[dev-dependencies]
glm-git-store.workspace = true
glm-object-provider.workspace = true
glm-testkit.workspace = true
tempfile.workspace = true

# NOTE on the kernel adapter: the FSKit `FSVolume` Swift adapter and its signed
# system extension require Apple tooling and approval flows and can only be
# validated on real Apple hardware (issue #10, #12). To keep `--all-features`
# green on every runner, that on-device adapter is intentionally NOT wired in
# here; `FskitOps` is the backend's tested logic, and the Swift adapter is the
# remaining step (see docs/platform-macos.md).
