[package]
name = "glm-fs-fuse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux FUSE backend: callback logic mapped to the workspace engine, with an optional libfuse adapter."

[lints]
workspace = true

[features]
# The real libfuse-backed kernel mount. Opt-in (NOT a default feature, and
# deliberately excluded from the default cross-platform `check` job) because
# `fuser` links libfuse3 at build time, which only exists on Linux hosts that
# installed it. Exercised by the manual `linux-mount` CI job and in Docker.
fuse = ["dep:fuser", "dep:libc"]

[dependencies]
glm-core.workspace = true
glm-workspace.workspace = true
glm-fs-common.workspace = true
fuser = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

[dev-dependencies]
glm-git-store.workspace = true
glm-object-provider.workspace = true
glm-testkit.workspace = true
tempfile.workspace = true

# The `fuser::Filesystem` adapter wrapping `FuseOps` lives in `src/adapter.rs`
# behind the `fuse` feature. `FuseOps` is the cross-platform, always-tested
# backend logic; the adapter is the real kernel mount and requires libfuse3
# (`cargo test -p glm-fs-fuse --features fuse`; see docs/platform-linux.md).
