[package]
name = "glm-fs-projfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows ProjFS backend scaffold."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
glm-workspace.workspace = true
glm-fs-common.workspace = true
