[package]
name = "glm-fsmonitor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Incremental changed-path journal and synchronization barrier."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
