[package]
name = "glm-git-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authoritative Git CLI adapter: bare store, fetch, cat-file batch, ref CAS."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
glm-testkit.workspace = true
