[package]
name = "glm-object-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Missing-object provider with request coalescing, batching, and caches."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
glm-git-store.workspace = true
tracing.workspace = true

[dev-dependencies]
glm-testkit.workspace = true
tempfile.workspace = true
