[package]
name = "glm-overlay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Copy-on-write writable overlay with tombstones and atomic publication."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
