[package]
name = "glm-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform data roots and canonical repository identity for git-lazy-mount."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
sha2.workspace = true
hex.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tempfile.workspace = true
