[package]
name = "glm-stage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistent staged delta, separate from HEAD and the overlay."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
