[package]
name = "glm-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test harness: ephemeral Git repos/remotes, fault injection, counting fetchers."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
glm-git-store.workspace = true
tempfile.workspace = true
