[package]
name = "glm-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Transactional workspace views, three-tree status, commits, and leases."

[lints]
workspace = true

[dependencies]
glm-core.workspace = true
glm-platform.workspace = true
glm-git-store.workspace = true
glm-object-provider.workspace = true
glm-overlay.workspace = true
glm-stage.workspace = true
glm-oplog.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
glm-testkit.workspace = true
tempfile.workspace = true
